<resources>
    <string name="app_name">NBLockScreen</string>
    <string name="ok">@android:string/ok</string>
    <string name="system_ui_date_pattern">@android:string/system_ui_date_pattern</string>
    <string name="widget_default_package_name" />
    <string name="widget_default_class_name" />
    <string name="config_notificationDefaultComponent">com.android.keyguard/cn.nubia.notification.CardListenerService</string>
    <string name="date_format">EEE, MMMM d</string>
    <string name="abbrev_wday_month_day_no_year">EEEMMMMd</string>
    <string name="clock_12hr_format">hm</string>
    <string name="clock_24hr_format">Hm</string>
    <string name="keyguard_password_enter_pin_code">Type PIN code</string>
    <string name="keyguard_password_enter_puk_code">Type SIM PUK and new PIN code</string>
    <string name="keyguard_password_enter_puk_prompt">SIM PUK code</string>
    <string name="keyguard_password_enter_pin_prompt">New SIM PIN code</string>
    <string name="keyguard_password_entry_touch_hint"><font size="17">Touch to type password</font></string>
    <string name="keyguard_password_enter_password_code">Type password to unlock</string>
    <string name="keyguard_password_enter_pin_password_code">Type PIN to unlock</string>
    <string name="keyguard_password_wrong_pin_code">Incorrect PIN code.</string>
    <string name="keyguard_password_wrong_puk_code">Incorrect PUK code!</string>
    <string name="keyguard_password_pin_failed">PIN operation failed!</string>
    <string name="keyguard_password_puk_failed">PUK operation failed!</string>
    <string name="keyguard_pin_accepted">Code Accepted!</string>
    <string name="pinpuk_attempts">"
Attempts Remaining :"</string>
    <string name="lockscreen_sim_error_message_short">Invalid Card.</string>
    <string name="keyguard_label_text">To unlock, press Menu then 0.</string>
    <string name="faceunlock_multiple_failures">Maximum Face Unlock attempts exceeded</string>
    <string name="keyguard_charged">Charged</string>
    <string name="keyguard_plugged_in">Charging, %d%%</string>
    <string name="keyguard_low_battery">Connect your charger.</string>
    <string name="keyguard_instructions_when_pattern_disabled">Press Menu to unlock.</string>
    <string name="keyguard_network_locked_message">Network locked</string>
    <string name="keyguard_perso_locked_message">SIM/RUIM is Perso locked</string>
    <string name="keyguard_missing_sim_message_short">No SIM card</string>
    <string name="keyguard_missing_sim_message">No SIM card in phone.</string>
    <string name="keyguard_missing_sim_instructions">Insert a SIM card.</string>
    <string name="keyguard_missing_sim_instructions_long">The SIM card is missing or not readable. Insert a SIM card.</string>
    <string name="keyguard_permanent_disabled_sim_message_short">Unusable SIM card.</string>
    <string name="keyguard_permanent_disabled_sim_instructions">"Your SIM card has been permanently disabled.
 Contact your wireless service provider for another SIM card."</string>
    <string name="keyguard_sim_locked_message">SIM card is locked.</string>
    <string name="keyguard_sim_puk_locked_message">SIM card is PUK-locked.</string>
    <string name="keyguard_sim_unlock_progress_dialog_message">Unlocking SIM card…</string>
    <string name="keyguard_widget_12_hours_format">h:mm</string>
    <string name="keyguard_widget_24_hours_format">kk:mm</string>
    <string name="keyguard_accessibility_widget_changed">%1$s. Widget %2$d of %3$d.</string>
    <string name="keyguard_accessibility_add_widget">Add widget.</string>
    <string name="keyguard_accessibility_widget_empty_slot">Empty</string>
    <string name="keyguard_accessibility_unlock_area_expanded">Unlock area expanded.</string>
    <string name="keyguard_accessibility_unlock_area_collapsed">Unlock area collapsed.</string>
    <string name="keyguard_accessibility_widget">%1$s widget.</string>
    <string name="keyguard_accessibility_user_selector">User selector</string>
    <string name="keyguard_accessibility_status">Status</string>
    <string name="keyguard_accessibility_camera">Camera</string>
    <string name="keygaurd_accessibility_media_controls">Media controls</string>
    <string name="keyguard_accessibility_widget_reorder_start">Widget reordering started.</string>
    <string name="keyguard_accessibility_widget_reorder_end">Widget reordering ended.</string>
    <string name="keyguard_accessibility_widget_deleted">Widget %1$s deleted.</string>
    <string name="keyguard_accessibility_expand_lock_area">Expand unlock area.</string>
    <string name="keyguard_accessibility_slide_unlock">Slide unlock.</string>
    <string name="keyguard_accessibility_pattern_unlock">Pattern unlock.</string>
    <string name="keyguard_accessibility_face_unlock">Face unlock.</string>
    <string name="keyguard_accessibility_pin_unlock">Pin unlock.</string>
    <string name="keyguard_accessibility_password_unlock">Password unlock.</string>
    <string name="keyguard_accessibility_pattern_area">Pattern area.</string>
    <string name="keyguard_accessibility_slide_area">Slide area.</string>
    <string name="keyguard_accessibility_transport_prev_description">Previous track button</string>
    <string name="keyguard_accessibility_transport_next_description">Next track button</string>
    <string name="keyguard_accessibility_transport_pause_description">Pause button</string>
    <string name="keyguard_accessibility_transport_play_description">Play button</string>
    <string name="keyguard_accessibility_transport_stop_description">Stop button</string>
    <string name="keyguard_accessibility_transport_thumbs_up_description">Thumbs up</string>
    <string name="keyguard_accessibility_transport_thumbs_down_description">Thumbs down</string>
    <string name="keyguard_accessibility_transport_heart_description">Heart</string>
    <string name="keyguard_accessibility_show_bouncer">Unlock to continue</string>
    <string name="keyguard_accessibility_hide_bouncer">Launch canceled</string>
    <string name="keyguard_accessibility_delete_widget_start">Drop %1$s to delete.</string>
    <string name="keyguard_accessibility_delete_widget_end">%1$s will not be deleted.</string>
    <string name="password_keyboard_label_symbol_key">\?123</string>
    <string name="password_keyboard_label_alpha_key">ABC</string>
    <string name="password_keyboard_label_alt_key">ALT</string>
    <string name="keyboardview_keycode_alt">Alt</string>
    <string name="keyboardview_keycode_cancel">Cancel</string>
    <string name="keyboardview_keycode_delete">Delete</string>
    <string name="keyboardview_keycode_done">Done</string>
    <string name="keyboardview_keycode_mode_change">Mode change</string>
    <string name="keyboardview_keycode_shift">Shift</string>
    <string name="keyboardview_keycode_enter">Enter</string>
    <string name="description_target_unlock">Unlock</string>
    <string name="description_target_camera">Camera</string>
    <string name="hello">Hello World, TestActivity!</string>
    <string name="description_target_silent">Silent</string>
    <string name="description_target_soundon">Sound on</string>
    <string name="description_target_search">Search</string>
    <string name="description_direction_up">Slide up for %s.</string>
    <string name="description_direction_down">Slide down for %s.</string>
    <string name="description_direction_left">Slide left for %s.</string>
    <string name="description_direction_right">Slide right for %s.</string>
    <string name="user_switched">Current user %1$s.</string>
    <string name="kg_emergency_call_label">Emergency call</string>
    <string name="kg_forgot_pattern_button_text">Forgot Pattern</string>
    <string name="kg_wrong_pattern">Wrong Pattern</string>
    <string name="kg_wrong_password">Wrong Password</string>
    <string name="kg_wrong_pin">Wrong PIN</string>
    <string name="kg_too_many_failed_attempts_countdown">Try again in %d seconds.</string>
    <string name="kg_pattern_instructions">Draw your pattern</string>
    <string name="kg_sim_pin_instructions">Enter SIM PIN</string>
    <string name="kg_pin_instructions">Enter PIN</string>
    <string name="kg_password_instructions">Enter Password</string>
    <string name="kg_puk_enter_puk_hint">Enter PUK code to continue.</string>
    <string name="kg_puk_enter_pin_hint">Enter desired PIN code</string>
    <string name="kg_enter_confirm_pin_hint">Confirm desired PIN code</string>
    <string name="kg_sim_unlock_progress_dialog_message">Unlocking SIM card…</string>
    <string name="kg_invalid_sim_pin_hint">Type a PIN that is 4 to 8 numbers.</string>
    <string name="kg_invalid_sim_puk_hint">PUK code should be 8 numbers or more.</string>
    <string name="kg_invalid_puk">Re-enter the correct PUK code. Repeated attempts will permanently disable the SIM.</string>
    <string name="kg_invalid_confirm_pin_hint">PIN codes does not match</string>
    <string name="kg_login_too_many_attempts">Too many pattern attempts</string>
    <string name="kg_login_instructions">To unlock, sign in with your Google account.</string>
    <string name="kg_login_username_hint">Username (email)</string>
    <string name="kg_login_password_hint">Password</string>
    <string name="kg_login_submit_button">Sign in</string>
    <string name="kg_login_invalid_input">Invalid username or password.</string>
    <string name="kg_login_account_recovery_hint">"Forgot your username or password?
Visit "<b>google.com/accounts/recovery</b>.</string>
    <string name="kg_login_checking_password">Checking account…</string>
    <string name="kg_too_many_failed_pin_attempts_dialog_message" formatted="false">"You have incorrectly typed your PIN %d times. 

Try again in %d seconds."</string>
    <string name="kg_too_many_failed_password_attempts_dialog_message" formatted="false">"You have incorrectly typed your password %d times. 

Try again in %d seconds."</string>
    <string name="kg_too_many_failed_pattern_attempts_dialog_message" formatted="false">"You have incorrectly drawn your unlock pattern %d times. 

Try again in %d seconds."</string>
    <string name="kg_failed_attempts_almost_at_wipe" formatted="false">You have incorrectly attempted to unlock the phone %d times. After %d more unsuccessful attempts, the phone will be reset to factory default and all user data will be lost.</string>
    <string name="kg_failed_attempts_now_wiping">You have incorrectly attempted to unlock the phone %d times. The phone will now be reset to factory default.</string>
    <string name="kg_failed_attempts_almost_at_login" formatted="false">"You have incorrectly drawn your unlock pattern %d times. After %d more unsuccessful attempts, you will be asked to unlock your phone using an email account.

 Try again in %d seconds."</string>
    <string name="kg_text_message_separator">" — "</string>
    <string name="kg_reordering_delete_drop_target_text">Remove</string>
    <string name="kg_password_wrong_pin_code_pukked">Incorrect SIM PIN code, please input PUK code to unlock your device.</string>
    <string name="kg_password_wrong_puk_code_dead">SIM is unusable. Contact your carrier.</string>
    <string name="kg_password_pin_failed">SIM PIN operation failed!</string>
    <string name="kg_password_puk_failed">SIM PUK operation failed!</string>
    <string name="kg_pin_accepted">Code Accepted!</string>
    <string name="keyguard_transport_prev_description">Previous track button</string>
    <string name="keyguard_transport_next_description">Next track button</string>
    <string name="keyguard_transport_pause_description">Pause button</string>
    <string name="title_photo_flow_preference">LockScreen Photo</string>
    <string name="title_photo_flow_time_preference">Play time</string>
    <string name="title_photo_flow_select_preference">Select the folder</string>
    <string name="save_password_label">Confirm</string>
</resources>