<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/title_photo_flow_preference" android:key="photoflow_switch_preference" />
    <PreferenceScreen android:title="@string/title_photo_flow_time_preference" android:key="photo_flow_time_preference" android:dependency="photoflow_switch_preference">
        <intent android:targetPackage="cn.nubia.photoflow" android:action="android.intent.action.MAIN" android:targetClass="cn.nubia.photoflow.setting.SelectTimeActivity" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/title_photo_flow_select_preference" android:dependency="photoflow_switch_preference">
        <intent android:targetPackage="cn.nubia.photoflow" android:action="android.intent.action.MAIN" android:targetClass="cn.nubia.photoflow.setting.SelectFolderActivity" />
    </PreferenceScreen>
</PreferenceScreen>