<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.EmergencyCarrierArea android:gravity="bottom|center" android:layout_gravity="bottom|center" android:orientation="vertical" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="20.0dip">
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/keyguard_security_sim_buttom_margin_bootom">
            <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/kg_confirm_button_font_size" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/key_cancel" android:background="@drawable/nubia_input_bg" android:layout_width="@dimen/keyguard_security_sim_pin_confirm_width" android:layout_height="@dimen/keyguard_security_view_sim_pin_input_height" android:layout_marginLeft="@dimen/keyguard_security_sim_pin_confirm_margin_horizontal" android:layout_marginRight="@dimen/keyguard_security_sim_pin_confirm_margin_horizontal" android:text="@string/keyboardview_keycode_cancel" android:drawablePadding="8.0dip" />
            <Space android:id="@id/space" android:layout_width="0.0px" android:layout_height="0.0px" />
            <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/kg_confirm_button_font_size" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/key_enter" android:background="@drawable/nubia_input_bg" android:layout_width="@dimen/keyguard_security_sim_pin_confirm_width" android:layout_height="@dimen/keyguard_security_view_sim_pin_input_height" android:layout_marginLeft="@dimen/keyguard_security_sim_pin_confirm_margin_horizontal" android:layout_marginRight="@dimen/keyguard_security_sim_pin_confirm_margin_horizontal" android:text="@string/save_password_label" android:drawablePadding="8.0dip" />
        </LinearLayout>
        <Button android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/kg_status_line_font_size" android:textColor="@color/white" android:id="@id/forgot_password_button" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:drawablePadding="8.0dip" style="?android:attr/buttonBarButtonStyle" />
        <ViewStub android:id="@id/stub_msim_carrier_text" android:layout="@layout/msim_keyguard_carrier_area" android:inflatedId="@id/msim_keyguard_carrier_area" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <com.android.keyguard.CarrierText android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/kg_status_line_font_size" android:textColor="@color/white" android:ellipsize="marquee" android:id="@id/carrier_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <com.android.keyguard.EmergencyButton android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/kg_emergency_call_font_size" android:textColor="@color/white" android:id="@id/emergency_call_button" android:layout_width="108.0dip" android:layout_height="32.0dip" android:layout_marginBottom="0.0dip" android:text="@string/kg_emergency_call_label" android:drawableLeft="@drawable/lockscreen_emergency_button" android:drawablePadding="8.0dip" style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</com.android.keyguard.EmergencyCarrierArea>